@@ -13,6 +13,7 @@ extern char* _useragent;
 extern unsigned short _nettimeout;
 extern char _nethost[];
 
+unsigned char Net_Wait(unsigned char id);
 unsigned char Net_Command(void);
 signed char Net_SCommand(void);
 extern void _nsemaon(void);
